fix unit test problem use Paths.of() instead of Paths.get() in getGitStatus() method